--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="container">
           <section class="columns panel">
               <div class="column is-half">
-                <p>This is your personal website. Let your imagination wild.</p>
+                <p> Hey, Gorgeous! This is Jada Madden's page.</p>
                 <a href="./chicktech-2018-2019">Your Personal ChickTech Portfolio</a>
               </div>
 
