--- a/chicktech-2018-2019/index.html
+++ b/chicktech-2018-2019/index.html
@@ -29,7 +29,7 @@
                     <img src="https://us.123rf.com/450wm/alxyzt/alxyzt1708/alxyzt170800029/83481878-emoticon-lindo-amor-coraz%C3%B3n-personaje-de-dibujos-animados-icono-kawaii-dise%C3%B1o-plano-vector-illustration.jpg?ver=6" alt="Your image should go here!">
                 </div>
                 <div class="has-text-centered column is-half">
-                    <p class="title">Your Name Here</p>
+                    <p class="title">j=Jada Madden</p>
                 </div>
             </section>
             
