--- a/chicktech-2018-2019/index.html
+++ b/chicktech-2018-2019/index.html
@@ -36,7 +36,7 @@
             
             <section class="panel">
                 <h2 class="panel-heading">About:</h2>
-                <p class="panel-block"> Hi, I'm Jada Madden. I live in Green valley ranch, Denver CO. I love to walk, I am not a people person! My favorite color is magenta, I have 5 siblings, 6 including myself. I sm the second oldest under my sister, Nia. I am very passionate about engineering because it takes away from my stress, helps me focus, and i love working with my hands. </p>
+                <p class="panel-block"> Hi, I'm Jada Madden. I live in Green valley ranch, Denver CO. I love to walk, I am not a people person! My favorite color is magenta, I have 5 siblings, 6 including myself. I am the second oldest under my sister, Nia. I am very passionate about engineering because it takes away from my stress, helps me focus, and i love working with my hands. </p>
             </section>
 
             <section class="panel">
