--- a/chicktech-2018-2019/index.html
+++ b/chicktech-2018-2019/index.html
@@ -24,9 +24,9 @@
             <section class="columns panel">
                 <div class="column is-half">
                     <!-- put a URL to your image or put your image in the folder called assets-->
-                    <!-- if you put your image in assets, write the path out in the quotes below like: src="./assets/nameofyourimage.jpg" -->
-                    <!-- if you have a URL, write the ULR in the quotes below like: src="http://yourURLhere.com/otherstuff.jpg"-->
-                    <img src="https://us.123rf.com/450wm/alxyzt/alxyzt1708/alxyzt170800029/83481878-emoticon-lindo-amor-coraz%C3%B3n-personaje-de-dibujos-animados-icono-kawaii-dise%C3%B1o-plano-vector-illustration.jpg?ver=6" alt="Your image should go here!">
+                    <!-- if you put your image in assets, write the path out in the quotes below like: src="" -->
+                    <!-- if you have a URL, write the ULR in the quotes below like: src="http://yourURLhere.com/otherstuff.jpg"-->https://www.thelocal.de/userdata/images/article/fa6fd5014ccbd8f4392f716473ab6ff354f871505d9128820bbb0461cce1d645.jpg
+                    <img src=""Your image should go here!">
                 </div>
                 <div class="has-text-centered column is-half">
                     <p class="title">Jada Madden</p>
