--- a/chicktech-2018-2019/index.html
+++ b/chicktech-2018-2019/index.html
@@ -26,8 +26,9 @@
                     <!-- put a URL to your image or put your image in the folder called assets-->
                     <!-- if you put your image in assets, write the path out in the quotes below like: src="" -->
                     <!-- if you have a URL, write the ULR in the quotes below like: src="http://yourURLhere.com/otherstuff.jpg"-->
-                    <img src=""Your image should go here!">https://www.thelocal.de/userdata/images/article/fa6fd5014ccbd8f4392f716473ab6ff354f871505d9128820bbb0461cce1d645.jpg
+                    <img src=""Your image should go here!">
                 </div>
+              https://www.thelocal.de/userdata/images/article/fa6fd5014ccbd8f4392f716473ab6ff354f871505d9128820bbb0461cce1d645.jpg
                 <div class="has-text-centered column is-half">
                     <p class="title">Jada Madden</p>
                 </div>
